
* added internal simple ftp client; it is used for FTP downloads
  by default

* shell: 
  - db package list is cached what speeds up program start
  - ls: long listings are passed to $PAGER program (default is "less")
  - ls: new switches: -n (list package name only), -G (list group)
        and -O (show package summaries)

* added log file suppport (--log option)

* added checks of packages.dir's data integrity before it is loading,
  it preventing program SIGSEVs on load indexes

* changed default cache directory to $HOME/.poldek-cache
* few (nice) improvements and bugfixes 


0.16 (stable release):
* fixed removable media support in non-install-dist modes
* shell: uninstall: fix: don't remove pkg from install list if removal fails

0.15.9:
* shell:
   - desc: added package file size display
   - search: added Group search
   - install: unhidden --mercy
   - uninstall: fix: don't remove pkg from install list if --test is used
   - added -h opt. to all commands
* removed GCC's nested functions usage -- seems that it causes SIGSEVs on
   some machines (Arkadiusz Patyk <areq@pld.org.pl>)
* fix: don't include trailing whitespaces in config values

0.15.8:
* curl: disabled timeouts, cURL's timeout it's a time to transfer file 
* curl: amount and total sizes are displayed in progress bar
* fix: enabled --hold 
* fix: SIGSEV killed when pkg description requested while pkg index
       doesn't contain package descriptions at all
* shell: fixed installed package list managment
* curl: fixed progress bar if total file size is unknown 
  (Michal Moskal <malekith@pld.org.pl>)
* "mercy" mode bugfix

0.15.7:
* downloaded packages are removed after successful installation by default
  (keep_downloads=yes in config can change to previous behavior)
* changed semantics of --test: -t causes poldek's checks only, 
  -tt turns on tests performed by rpm too.
* "mercy" dependecy checking mode may be enabled in config
* added workarounds and traps for (propably) curl's bugs