@@ -53,7 +53,9 @@
     <em>interactive</em> mode, which puts the user into a readline 
     interface with command line autocompletion and history. 
     In this mode user is able to browse, search, download, install/upgrade and 
-    uninstall packages. This is similar in concept to shell mode of Perl's CPAN module. 
+    uninstall packages. This is similar in concept to shell mode of Perl's CPAN module
+    (see sample <url name="interactive mode session" 
+              url="screenshoots.html#shell-session">).
 
     <item> Installation system from scratch needs 8-12 MB memory only
     <p>	
@@ -65,7 +67,8 @@
 
     <item> Quick package set verification for unresolved dependencies 
     unneeded conflicts and dependency loops. <p>
-    Feature is is useful for distribution maintainers.
+    Feature is is useful for distribution maintainers; see sample
+    <url name="report" url="screenshoots.html#verify-report">).
 
     <item> Division package set for the purpose of placing it
       on removable media (like CDROM or ZIP).
@@ -93,7 +96,6 @@
     of packages in that case can be done with <em>sudo</em>. 
 
     </itemize>
-
 
     <sect> Quick start 
     <p>
@@ -134,132 +136,7 @@
     $ poldek -s SOURCE [OPTION...] [PACKAGE...]
     </verb></tscreen>
      
-    Sample session:
-
-    program executed in interactive mode (what is the default)...
-    <tscreen><verb>
-$ poldek -s ftp://smok.znienacka.net/pub/PLD/RPMS/
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.mdd...
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz...
-.................................................. 100.0% [1.4M]                
-Verifying ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz... OK
-Loading ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz...
-3063 packages read
-Loading db packages [/var/lib/rpm].......done
-750 packages loaded
-
-Welcome to the poldek shell mode. Type "help" for help with commands.
-poldek&gt; help
-
-poldek @VERSION@ (beta)
-ls        [OPTION...] [PACKAGE...]             List packages
-install   [OPTION...] PACKAGE...               Install packages
-uninstall [OPTION...] PACKAGE...               Uninstall packages
-get       [OPTION...] PACKAGE...               Download packages
-search    [OPTION...] PATTERN [PACKAGE...]     Search packages
-desc      [OPTION...] PACKAGE...               Display packages info
-reload                                         Reload installed packages
-help                                           Display this help
-quit                                           Quit poldek
-
-For now "search" and "desc" commands doesn't work with installed packages.
-
-Type COMMAND -? for details.
-poldek&gt;
-</verb></tscreen>
-
-...in which user is able to view packages information...
-
-<tscreen><verb>
-poldek&gt; desc gimp-1.2.2-3 
-Summary:        The GNU Image Manipulation Program
-Group:          X11/Applications/Graphics
-Vendor:         PLD
-License:        GPL
-Arch/OS:        i686/linux
-URL:            http://www.gimp.org/
-Built:          2001/10/28 23:16 at kenny
-Size:           19.5 MB (20498783 B)
-Package size:   6.8 MB (7136376 B)
-Path:           ftp://smok.znienacka.net/pub/PLD/RPMS/
-Epoch:          1
-Description:
-The GIMP is an image manipulation program suitable for photo
-retouching, image composition and image authoring. Many people find it
-extremely useful in creating logos and other graphics for web pages.
-The GIMP has many of the tools and filters you would expect to find in
-similar commercial offerings, and some interesting extras as well.
-
-poldek&gt
-</verb></tscreen>
-
-...see if there any packages need upgrade...
-
-<tscreen><verb>
-poldek&gt; ls -lU g*
-available                  installed     build date               size
-gd-2.0.1-2                 1.8.4-6       2001/10/06 09:08        232.0k
-gd-devel-2.0.1-2           1.8.4-6       2001/10/06 09:08         62.0k
-gdk-pixbuf-0.13.0-1        0.11.0-2      2001/11/05 19:10        285.0k
-ghostscript-7.03-1         7.00-3        2001/10/29 09:18          7.5m
-gmc-4.5.55-3               4.5.54-5      2001/10/22 00:12          1.4m
-gnapster-1.5.0-1           1.4.2-1       2001/06/25 10:35        456.0k
-gnome-games-1.4.0.3-1      1.4.0.1-2     2001/09/21 09:27         10.1m
-gnome-libs-1.4.1.2-4       1.2.13-2      2001/10/21 04:02          3.0m
-gnome-print-0.32-1         0.29-1        2001/11/10 03:57        704.0k
-gnome-print-devel-0.32-1   0.29-1        2001/11/10 03:57         85.0k
-gnome-vfs-1.0.2-1          1.0-2         2001/09/18 21:36          1.3m
-gnupg-i-1.0.6-2            1.0.3-3       2001/10/30 23:59          6.0k
-gpm-1.19.5-1               1.19.3-6      2001/09/25 20:43        273.0k
-gpm-devel-1.19.5-1         1.19.3-6      2001/09/25 20:43          7.0k
-gpm-static-1.19.5-1        1.19.3-6      2001/09/25 20:43         22.0k
-gvim-gtk-6.0-1             6.0ai-1       2001/10/10 18:55          1.1m
-
-16 packages, 27 MB
-poldek&gt
-</verb></tscreen>
-
-...install packages...
-
-<tscreen><verb>
-poldek&gt upgrade gimp-1.2.2-3
-Processing dependencies...
-gimp-1.2.1-7 obsoleted by gimp-1.2.2-3
-  greedy upgrade gimp-aa-1.2.1-7 to 1.2.2-3 (unresolved gimp = 1.2.1)
-    gimp-aa-1.2.1-7 obsoleted by gimp-aa-1.2.2-3
-  greedy upgrade gimp-devel-1.2.1-7 to 1.2.2-3 (unresolved gimp = 1.2.1)
-    gimp-devel-1.2.1-7 obsoleted by gimp-devel-1.2.2-3
-      greedy upgrade gimp-static-1.2.1-7 to 1.2.2-3 (unresolved gimp-devel = 1.2.1)
-        gimp-static-1.2.1-7 obsoleted by gimp-static-1.2.2-3
-There are 4 packages to install (3 marked by dependencies), 4 to uninstall:
-I gimp-1.2.2-3
-D gimp-aa-1.2.2-3
-D gimp-devel-1.2.2-3
-D gimp-static-1.2.2-3
-R gimp-aa-1.2.1-7
-R gimp-devel-1.2.1-7
-R gimp-1.2.1-7
-R gimp-static-1.2.1-7
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-static-1.2.2-3.i686.rpm...
-.................................................. 100.0% [122.3K]              
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-devel-1.2.2-3.i686.rpm...
-.................................................. 100.0% [233.5K]              
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-aa-1.2.2-3.i686.rpm...
-.................................................. 100.0% [17.1K]               
-Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-1.2.2-3.i686.rpm...
-.................................................. 100.0% [6.8M]                
-Executing sudo /bin/rpm --upgrade -vh --root / --noorder...
-Preparing...                ########################################### [100%]
-   1:gimp                   ########################################### [ 25%]
-   2:gimp-aa                ########################################### [ 50%]
-   3:gimp-devel             ########################################### [ 75%]
-   4:gimp-static            ########################################### [100%]
-poldek&gt
-</verb></tscreen>
-
-...and more.
-
-     
+    See also <url name="sample interactive mode session" url="screenshoots.html">.
 
     <sect> Documentation 
     <p>
@@ -313,7 +190,7 @@ poldek&gt
       Getting the module (password: "cvs"): 
       <tscreen><verb>
       cvs -d :pserver:cvs@anoncvs.pld.org.pl:/cvsroot login
-      cvs -d :pserver:cvs@anoncvs.pld.org.pl:/cvsroot get -r v@VERSION_CVSTAG@ installer/poldek
+      cvs -d :pserver:cvs@anoncvs.pld.org.pl:/cvsroot get -r vv@VERSION_CVSTAG@ installer/poldek
       </verb></tscreen>            
       Particular files may be accessed via 
 	<url url="http://cvs.pld.org.pl/installer/poldek/" name="CVSWeb">
