@@ -2,9 +2,9 @@
 # Sample configuration for PLD  
 # 
 
-source = [PLD];ftp://ftp.pld.org.pl/dists/ra/PLD/i686/PLD/RPMS/
-#source = [PLDtest];ftp://ftp.pld.org.pl/dists/ra/test/i686/
-#source = [zenek];/home/zenek/rpm/RPMS/
+source = pld;ftp://ftp.pld.org.pl/dists/ra/PLD/i686/PLD/RPMS/
+#source = pld-test;ftp://ftp.pld.org.pl/dists/ra/test/i686/
+#source = zenek;/home/zenek/rpm/RPMS/
 
 
 # NOTE: directory *must* exists; default $HOME/.poldek-cache
