@@ -1,0 +1,241 @@
+<!doctype linuxdoc system>
+<!-- $Id$ -->
+
+<linuxdoc>
+  <article> 
+    <title> the poldek screenshoots </title>
+
+    <sect>Sample poldek's interactive mode session<label id="shell-session">
+    <p>
+
+    Start in the interactive mode...
+    <tscreen><verb>
+$ poldek -s ftp://smok.znienacka.net/pub/PLD/RPMS/
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.mdd...
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz...
+.................................................. 100.0% [2.4M]                
+Verifying ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz... OK
+Loading ftp://smok.znienacka.net/pub/PLD/RPMS/packages.dir.gz...
+3063 packages read
+Loading db packages [/var/lib/rpm].......done
+750 packages loaded
+
+Welcome to the poldek shell mode. Type "help" for help with commands.
+poldek&gt; help
+
+poldek 0.17 (beta)
+ls        [OPTION...] [PACKAGE...]             List packages
+install   [OPTION...] PACKAGE...               Install packages
+uninstall [OPTION...] PACKAGE...               Uninstall packages
+get       [OPTION...] PACKAGE...               Download packages
+search    [OPTION...] PATTERN [PACKAGE...]     Search packages
+desc      [OPTION...] PACKAGE...               Display packages info
+reload                                         Reload installed packages
+help                                           Display this help
+quit                                           Quit poldek
+
+For now "search" and "desc" commands doesn't work with installed packages.
+
+Type COMMAND -? for details.
+poldek&gt;
+</verb></tscreen>
+
+...in which user is able to view packages information...
+
+<tscreen><verb>
+poldek&gt; desc gimp-1.2.2-3 
+Summary:        The GNU Image Manipulation Program
+Group:          X11/Applications/Graphics
+Vendor:         PLD
+License:        GPL
+Arch/OS:        i686/linux
+URL:            http://www.gimp.org/
+Built:          2001/10/28 23:16 at kenny
+Size:           19.5 MB (20498783 B)
+Package size:   6.8 MB (7136376 B)
+Path:           ftp://smok.znienacka.net/pub/PLD/RPMS/
+Epoch:          1
+Description:
+The GIMP is an image manipulation program suitable for photo
+retouching, image composition and image authoring. Many people find it
+extremely useful in creating logos and other graphics for web pages.
+The GIMP has many of the tools and filters you would expect to find in
+similar commercial offerings, and some interesting extras as well.
+
+poldek&gt
+</verb></tscreen>
+
+...see if there are any packages need upgrade...
+
+<tscreen><verb>
+poldek&gt; ls -lU g*
+available                  installed     build date               size
+gd-2.0.1-2                 1.8.4-6       2001/10/06 09:08        232.0k
+gd-devel-2.0.1-2           1.8.4-6       2001/10/06 09:08         62.0k
+gdk-pixbuf-0.13.0-1        0.11.0-2      2001/11/05 19:10        285.0k
+ghostscript-7.03-1         7.00-3        2001/10/29 09:18          7.5m
+gmc-4.5.55-3               4.5.54-5      2001/10/22 00:12          1.4m
+gnapster-1.5.0-1           1.4.2-1       2001/06/25 10:35        456.0k
+gnome-games-1.4.0.3-1      1.4.0.1-2     2001/09/21 09:27         10.1m
+gnome-libs-1.4.1.2-4       1.2.13-2      2001/10/21 04:02          3.0m
+gnome-print-0.32-1         0.29-1        2001/11/10 03:57        704.0k
+gnome-print-devel-0.32-1   0.29-1        2001/11/10 03:57         85.0k
+gnome-vfs-1.0.2-1          1.0-2         2001/09/18 21:36          1.3m
+gnupg-i-1.0.6-2            1.0.3-3       2001/10/30 23:59          6.0k
+gpm-1.19.5-1               1.19.3-6      2001/09/25 20:43        273.0k
+gpm-devel-1.19.5-1         1.19.3-6      2001/09/25 20:43          7.0k
+gpm-static-1.19.5-1        1.19.3-6      2001/09/25 20:43         22.0k
+gvim-gtk-6.0-1             6.0ai-1       2001/10/10 18:55          1.1m
+
+16 packages, 27 MB
+poldek&gt
+</verb></tscreen>
+
+...install packages...
+
+<tscreen><verb>
+poldek&gt upgrade gimp-1.2.2-3
+Processing dependencies...
+gimp-1.2.1-7 obsoleted by gimp-1.2.2-3
+  greedy upgrade gimp-aa-1.2.1-7 to 1.2.2-3 (unresolved gimp = 1.2.1)
+    gimp-aa-1.2.1-7 obsoleted by gimp-aa-1.2.2-3
+  greedy upgrade gimp-devel-1.2.1-7 to 1.2.2-3 (unresolved gimp = 1.2.1)
+    gimp-devel-1.2.1-7 obsoleted by gimp-devel-1.2.2-3
+      greedy upgrade gimp-static-1.2.1-7 to 1.2.2-3 (unresolved gimp-devel = 1.2.1)
+        gimp-static-1.2.1-7 obsoleted by gimp-static-1.2.2-3
+There are 4 packages to install (3 marked by dependencies), 4 to uninstall:
+I gimp-1.2.2-3
+D gimp-aa-1.2.2-3
+D gimp-devel-1.2.2-3
+D gimp-static-1.2.2-3
+R gimp-aa-1.2.1-7
+R gimp-devel-1.2.1-7
+R gimp-1.2.1-7
+R gimp-static-1.2.1-7
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-static-1.2.2-3.i686.rpm...
+.................................................. 100.0% [122.3K]              
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-devel-1.2.2-3.i686.rpm...
+.................................................. 100.0% [233.5K]              
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-aa-1.2.2-3.i686.rpm...
+.................................................. 100.0% [17.1K]               
+Retrieving ftp://smok.znienacka.net/pub/PLD/RPMS/gimp-1.2.2-3.i686.rpm...
+.................................................. 100.0% [6.8M]                
+Executing sudo /bin/rpm --upgrade -vh --root / --noorder...
+Preparing...                ########################################### [100%]
+   1:gimp                   ########################################### [ 25%]
+   2:gimp-aa                ########################################### [ 50%]
+   3:gimp-devel             ########################################### [ 75%]
+   4:gimp-static            ########################################### [100%]
+poldek&gt
+</verb></tscreen>
+
+...and more.
+</sect>
+
+
+<sect>Verification report<label id="verify-report">
+
+<tscreen><verb>
+$ poldek -s ftp://ftp.pld.org.pl/PLD-1.0/i686/PLD/RPMS/packages.dir.gz -V
+Loading ftp://ftp.pld.org.pl/PLD-1.0/i686/PLD/RPMS/packages.dir.gz...
+3610 packages read
+Indexing...
+
+Verifying dependencies...
+error: acid-0.9.6b13-1: req adodb >= 0.93 not found
+error: acid-0.9.6b13-1: req phplot >= 4.4.6 not found
+error: apache-mod_python-2.7.6-3: req python = 2.1.1 not matched
+error: apache-mod_python-2.7.6-3: req libpython2.1.so.0.0 not found
+error: avifile-win32-0.6.0-0.20011220admin.3: req w32codecs not found
+error: ax25-apps-0.0.5-1: req ax25-tools >= 0.0.8 not found
+error: axfrdns-1.05-10: req ucspi-tcp not found
+error: bigsister-oracle-0.97p2-1: req perl-DBD-Oracle not found
+error: bigsister-oracle-0.97p2-1: req perl(DBD::Oracle) not found
+error: demarc-client-1.05.RC1-3: req snort(mysql) >= 1.8.1 not found
+error: denemo-0.5.5-2: req lilypond not found
+error: exmh-2.5-1: req mh not found
+error: gk-0.14a-1: req libh323.so.1 not found
+error: gnews-0.1.0-1: req libgnews.so not found
+error: happy-1.8-1: req libgmp.so.2 not found
+error: jultaf-0.0.9-1: req libpq.so.2.1 not found
+error: libbonobo-1.109.0-2: req libbonobo-activation.so.3 not found
+error: libbonobo-1.109.0-2: req libglib-1.3.so.12 not found
+error: libbonobo-1.109.0-2: req libgmodule-1.3.so.12 not found
+error: libbonobo-1.109.0-2: req libgobject-1.3.so.12 not found
+error: libbonobo-1.109.0-2: req libgthread-1.3.so.12 not found
+error: netsaint-0.0.7b7-2: req netsaint-plugins not found
+error: ohphone-1.1pl1-1: req libh323.so.1 not found
+error: openam-1.0beta2-1: req libh323.so.1 not found
+error: perl-CGI-Cache-1.20-2: req perl(Cache::SizeAwareFileCache) not found
+error: perl-PDL-Slatec-2.2.1-7: req perl(PDL::Slatec) not found
+error: perl-Params-Validate-0.11-1: req perl(Attribute::Handlers) not found
+error: poedit-1.1.5-2: req libwx_gtk-2.3.so.0 not found
+error: python-ldap-1.10alpha3-1: req python = 2.1.1 not matched
+error: vanessa_logger-sample-0.0.2-2: req vanessa_logger-devel-0.0.2 not found
+error: webmin-heartbeat-0.90-3: req heartbeat not found
+error: webmin-majordomo-0.90-3: req majordomo not found
+error: webmin-printer-0.90-3: req lpd not found
+error: wv-0.7.1-1: req libwmf-0.2.so.1 not found
+error: wxPython-2.3.1-1: req libwx_gtk-2.3.so.0 not found
+error: wxPython-2.3.1-1: req libwx_gtk_gl-2.3.so.0 not found
+error: xemacs-edict-pkg-1.12-2: req xemacs-mule-base-pkg not found
+error: xemacs-egg-its-pkg-1.26-2: req xemacs-leim-pkg not found
+error: xemacs-egg-its-pkg-1.26-2: req xemacs-mule-base-pkg not found
+error: xmps-win32-plugin-0.0.4-1: req avi-codecs not found
+error: xpcd-gimp-2.08-4: req libgimp-1.2.so.0 not found
+
+Packages with unsatisfied dependencies:
+  acid-0.9.6b13-1
+  apache-mod_python-2.7.6-3
+  avifile-win32-0.6.0-0.20011220admin.3
+  ax25-apps-0.0.5-1
+  axfrdns-1.05-10
+  bigsister-oracle-0.97p2-1
+  demarc-client-1.05.RC1-3
+  denemo-0.5.5-2
+  exmh-2.5-1
+  gk-0.14a-1
+  gnews-0.1.0-1
+  happy-1.8-1
+  jultaf-0.0.9-1
+  libbonobo-1.109.0-2
+    libbonobo-devel-1.109.0-2
+      libbonobo-static-1.109.0-2
+  libbonobo-devel-1.109.0-2
+  libbonobo-static-1.109.0-2
+  netsaint-0.0.7b7-2
+    netsaint-nsca-1.2.0b4-1
+    netsaint-plugin-nrpe-1.2.5-1
+  netsaint-nsca-1.2.0b4-1
+  netsaint-plugin-nrpe-1.2.5-1
+  ohphone-1.1pl1-1
+  openam-1.0beta2-1
+  perl-CGI-Cache-1.20-2
+  perl-PDL-Slatec-2.2.1-7
+  perl-Params-Validate-0.11-1
+    perl-HTML-Mason-1.015-4
+  poedit-1.1.5-2
+  python-ldap-1.10alpha3-1
+  vanessa_logger-sample-0.0.2-2
+  webmin-heartbeat-0.90-3
+  webmin-majordomo-0.90-3
+  webmin-printer-0.90-3
+  wv-0.7.1-1
+    wv-devel-0.7.1-1
+      wv-static-0.7.1-1
+  wv-devel-0.7.1-1
+  wv-static-0.7.1-1
+  wxPython-2.3.1-1
+  xemacs-edict-pkg-1.12-2
+  xemacs-egg-its-pkg-1.26-2
+  xmps-win32-plugin-0.0.4-1
+  xpcd-gimp-2.08-4
+41 unsatisfied dependencies, 38 packages cannot be installed
+
+Verifying (pre)requirements...
+No loops -- OK
+</verb></tscreen>
+
+</sect>
+
+</article>
